# bzgames

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  COPYRIGHT  README.md
cmake/bz/: bz_functions.cmake
core/: CMakeLists.txt
core/include/bz/core/: logger.h  logger_traits.h
core/include/core/: core_traits.h  error.h  flags.h  logger.h  logger_traits.h  macros.h  pimpl.h  pimpl.tpp  result.h  result.tpp  result_traits.h  settings.h  tsv.h
core/src/: logger.cpp
engine/: CMakeLists.txt
engine/audio/: CMakeLists.txt
engine/common/: CMakeLists.txt
engine/common/include/common/: game.h  game_entity.h
engine/common/src/: game.cpp
engine/engine/: CMakeLists.txt
engine/engine/src/: engine.cpp  game.cpp
engine/graphics/: CMakeLists.txt
engine/graphics/src/: gl.h  gl_mesh.cpp  gl_renderer.cpp  gl_scene.cpp  gl_shader.cpp  gl_shader_program.cpp  gl_vertex_array.cpp  gl_vertex_buffer.cpp  gl_window.cpp  gl_window_private.cpp  gl_window_private.h  renderer.cpp  scene.cpp
engine/physics/: CMakeLists.txt
games/: CMakeLists.txt
games/dummy_game/: CMakeLists.txt
games/dummy_game/src/: dummy_game.cpp  dummy_game.h  dummy_renderer.cpp  dummy_renderer.h  dummy_scene.cpp  dummy_scene.h  example.cpp  main.cpp
games/geometria/: CMakeLists.txt
games/geometria/src/: geometria.cpp  geometria.h  main.cpp
resources/shaders/basic/: basic.frag  basic.vert
scripts/: indent_pp_macros.sh
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/logger/: CMakeLists.txt
tests/core/result/: CMakeLists.txt
tests/core/result/src/: test.h  (+1 more)
(+30 files in other folders)
